gitignore for videos

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 *.mp4
 *.webm
+static/img/BunnyBreeds.mp4
+static/img/BunnyBreedssmall.webm
+static/img/BunnyEating.mp4
+static/img/BunnyHealth.mp4
+static/img/BunnyHealth2.mp4
+static/img/BunnyPlaying.mp4
+static/img/BunnyPlayingsmall.webm
